--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
 		</td>
 	</tr>
 	<tr>
-		<td colspan=5>Header
+		<td colspan=2 align="left">Established 2014
+		</td>
+		<td align="middle">"All The News That's The Shit"
+		</td>
+		<td colspan=2 align="right">Number 69
 		</td>
 	</tr>
 	<tr>
 		<td colspan=2 height=160>Story about Jesus
 		</td>
-		<td height=120>Pilot video
+		<td height=120>
+			<div class="video-holder">
+				<iframe src="http://player.vimeo.com/video/73292195" width="400" height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
+				</iframe>
+			</div>
 		</td>
 		<td colspan=2 height=160>Synopsis
 		</td>		
