--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</td>
 		<td colspan=2 height=80>Monthly Feature (Cont'd)
 		</td>
-		<td height=80>Credits Photos
+		<td height=80>Credits / Photos
 		</td>
 	</tr>
 </table>
