--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</td>	
 	</tr>
 	<tr>
-		<td colspan=5 height=90>Logo
+		<td colspan=5 height=90><img src="mackdee_header.jpg></img>
 		</td>
 	</tr>
 	<tr>
