--- a/index.html
+++ b/index.html
@@ -6,147 +6,129 @@
 <body>
 <table border=0 width=1200>
 	<tr>
-		<td width=220>
-		</td>		
-		<td width=180>
+		<td width=400>
 		</td>	
 		<td width=400>
 		</td>	
-		<td width=180>
-		</td>	
-		<td width=220>
+		<td width=400>
 		</td>	
 	</tr>
 	<tr>
-		<td colspan=5 height=90><img src="mackdee_header.jpg" 
+		<td colspan=3 height=90><img src="mackdee_header.jpg" style="border-bottom: 1px solid 
 
-style="border-bottom: 1px solid rgba(6, 0, 0, 1)"></img>
+rgba(6, 0, 0, 1)"></img>
 		</td>
 	</tr>
 	<tr>
-		<td colspan=2 align="left" style="border-bottom: 1px solid 
-
-rgba(6, 0, 0, 1)">Established 2014
+		<td align="left" style="border-bottom: 1px solid rgba(6, 0, 0, 1)">Established 2014
 		</td>
-		<td align="middle" style="border-bottom: 1px solid rgba(6, 0, 0, 
+		<td align="middle" style="border-bottom: 1px solid rgba(6, 0, 0, 1)">"All The News 
 
-1)">"All The News That's The Shit"
+That's The Shit"
 		</td>
-		<td colspan=2 align="right" style="border-bottom: 1px solid 
-
-rgba(6, 0, 0, 1)">Number 69
+		<td align="right" style="border-bottom: 1px solid rgba(6, 0, 0, 1)">Number 69
 		</td>
 	</tr>
 	<tr>
-		<td style="padding-left: 10px;" colspan=2 height=160><p align = 
+		<td style="padding-left: 10px;" height=160><p align = "center"><b><font size="4">CHRIST 
 
-"center"><b><font size="4">CHRIST RESERECTED,PLANS WORLD TOUR W. 
-
-DALI,DOKKEN</font></b><p align = "center">BY The MDS.com staff</p><p 
+RESERECTED,PLANS WORLD TOUR W. DALI,DOKKEN</font></b><p align = "center">BY The MDS.com staff</p><p 
 
 align="justify">
-Considering his life and death resulted in thousands of years of hysteria and 
+Considering his life and death resulted in thousands of years of hysteria and that his recent 
 
-that his recent “resurrection” will surely produce more, 
-The most influential man in human history is surprisingly laid back and seems a 
+“resurrection” will surely produce more, 
+The most influential man in human history is surprisingly laid back and seems a bit bemused by the 
 
-bit bemused by the mania he inspires.
-   “Dude, Patti Smith never died for MY sins “cracks the savior, (Cont'd on Page 
-
-4)
+mania he inspires.
+   “Dude, Patti Smith never died for MY sins “cracks the savior, (Cont'd on Page 4)<hr>
 		</td>
 		<td height=120>
 			<div class="video-holder">
-				<iframe 
+				<iframe src="http://player.vimeo.com/video/73292195" width="400" 
 
-src="http://player.vimeo.com/video/73292195" width="400" height="180" 
-
-frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
+height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 				</iframe>
 			</div>
 		</td>
-		<td colspan=2 height=160>Synopsis
+		<td style="padding-left: 10px;" height=160><p align = "center"><b><font 
+
+size="4">Synopsys</font></b></p>As he approaches the threshold of middle age, Mackenzie Dylan looks 
+
+like a guy who has it all. He’s smart, funny and handsome. He’s well respectedas a successful New York 
+
+Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable  
+
+–albeit neurotic-best friend. But Mack Dylan carries his share of baggage-a repressed childhood, an 
+
+inability to express emotions, a failed engagement and a tendency not to deal with (Cont'd on Page 7) 
+
+<hr>
 		</td>		
 	</tr>
 	<tr>
-		<td style="padding-left: 10px;" height=150><p align = 
+		<td style="padding-left: 10px;" height=150><p align = "center"><b><font size="4"> Joke 
 
-"center"><b><font size="4"> Joke Of The Day </font></b><p align="justify">To 
+Of The Day </font></b><p align="justify">To smooth over her recent negative comments about his 
 
-smooth over her recent negative comments about his presidency, Hillary Clinton 
+presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing 
 
-said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing this, 
+this, Bill Clinton said he also will  "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie, 
 
-Bill Clinton said he also will  "Hug-it-Out" with political rivals Megan Fox, 
-
-Angelina Jolie, Sophia Vergara, Scarlett</p>
+Sophia Vergara, Scarlett Johanson, and that Hot waitress who works at The Olive Garden.    <br><hr></p>
 		</td>
-		<td style="padding-left: 10px; border-left: 1px solid rgba(6, 0, 
+		<td style="padding-left: 10px; border-left: 1px solid rgba(6, 0, 0, 1)"  height=180><p 
 
-0, 1)" colspan=3 height=180><p align = "center"><b><font size="4"> Editorial 
+align = "center"><b><font size="4"> Editorial </font></b><p align="justify">Abott had Costello. Penn 
 
-</font></b><p align="justify">Abott had Costello. Penn has Teller. Mick - Keith. 
+has Teller. Mick - Keith. Jonny – Ed. Bonnie even had Clyde. Then how sad was this country's perceived 
 
-Jonny – Ed. Bonnie even had Clyde. Then how sad was this country's perceived 
+state of affairs that a man with a record of extensive congressional service and unimaginable bravery 
 
-state of affairs that a man with a record of extensive congressional service and 
+and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for (Cont'd on Page 
 
-unimaginable bravery and patriotism could agree to choose the Alaskan Annie 
-
-Oakley as his running mate for the most important office on earth? She wasn't a 
-
-comedic foil, a mute magician (would've been nice), an iconic rhythm guitarist, a 
-
-jovial side-kick, or even a legendary criminal. They all compliment their partner 
-
-by giving them better odds for success than not. But, the Presidency isn't 
-
-Buffalo Bill's Wild West Show, and John McCain and Sarah “Ya Darn Tootin” Palin 
-
-were soundly defeated in the 2008 election. Horrible economy; wars; handsome, 
-
-charismatic black-man: a lot to overcome - I got it.  But the pandering attempt 
-
-to stimulate America's bassist gender-oriented nerve endings didn't work.  Thanks 
-
-and praise to the imaginary God of your choosing – we were safe. Done! We were 
-
-through with that mind-numbing (Cont'd on Page 3)</p>
+3)</p><hr>
 		</td>
-		<td> About The Creators
-		</td height=180>
+		<td style="padding-left: 10px; border-left: 1px solid rgba(6, 0, 0, 1)"  height=150><p 
+
+align = "center"><b><font size="4"> About The Creators</font></b><p align="justify">About The 
+
+Creators<hr>
+		</td>
 	</tr>
 	<tr>
-		<td style="padding-left: 10px;" colspan=2 height=180><p 
+		<td style="padding-left: 10px;" height=160><p align="justify">
+<p align = "center"><b><font size="4">A Word From Vin Marino</font></b><p align="justify"> "I co-wrote 
 
-align="justify">Johanson, and that Hot waitress who works at The Olive Garden.    
+& co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity 
 
- --------------------------------------------------
-<p align = "center"><b><font size="4">A Word From Vin Marino</font></b><p 
+not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on 
 
-align="justify"> "I co-wrote & co-created 'The Mackenzie Dylan Show'. Writing is 
+my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, “The 
 
-special for it brings me joy, is the one activity not involving a repetitive hand 
-
-motion where I possess some level of talent, and I can do it sitting on my lazy 
-
-ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever 
-
-staffed on, “The Larry Sanders Show”. Pizza is yummy and Patti Smith transcends 
-
-cool – Bye"</p>
+Larry Sanders Show”. Pizza is yummy and Patti Smith transcends cool – Bye"</p>
 		</td>
-		<td style="padding-left: 10px; border-left: 1px solid rgba(6, 0, 
+		<td style="padding-left: 10px; border-left: 1px solid rgba(6, 0, 0, 1)" Height=180><p 
 
-0, 1)" Height=180>Monthly Feature
+align = "center"><b><font size="4">Monthly Feature</font></b><p align="justify">Monthly Feature <hr>
 		</td>
-		<td colspan=2 height=180>Origin (Cont'd)
+		<td style="padding-left: 10px; border-left: 1px solid rgba(6, 0, 0, 1)" height=160><p 
+
+align = "center"><b><font size="4"> Origin </font></b><p align="justify">The story of “The Mackenzie 
+
+Dylan Show” is essentially a storyof friendship. I’ve known the Co-Creator Vincent Marino for 33 years. 
+
+It was from his “Creative Vagina” (zip locked in an airtight placenta) that the amazing, original idea 
+
+of a neurotic malcontent who must work out his family issues with an “imaginary” David Letterman-esque 
+
+talk show sprang!33 years ago, I was the pesky, unatheletic,
 		</td>	
 	</tr>
 	<tr>
-		<td colspan=2 height=80>TV Listings/Other Video
+		<td height=80>TV Listings/Other Video
 		</td>
-		<td colspan=2 height=80>Monthly Feature (Cont'd)
+		<td height=80>Monthly Feature (Cont'd)
 		</td>
 		<td height=80>Credits / Photos
 		</td>
