--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <head>
 </head>
@@ -60,7 +60,7 @@ The most influential man in human history is surprisingly laid back and seems a 
 	<tr>
 		<td height=80>TV Listings/Other Video
 		</td>
-		<td height=80>Monthly Feature (Cont'd)
+		<td height=80>Monthly Feature (Cont'ds)
 		</td>
 		<td height=80>Credits / Photos
 		</td>
