--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <html>
 
 <head>
+<style>
+#uniqueid:link {color:black; text-decoration: none;}
+#uniqueid:hover {color:red; text-decoration: underline;}
+#hrdotted {border: 1px dotted #848482; border-style: none none dotted; color: #fff; background-color: #fff; }
+
+</style>
 </head>
 
 <body>
 <table border=0 width=1200>
 	<tr>
 		<td width=400>
-		</td>	
+		</td>
 		<td width=400>
-		</td>	
+		</td>
 		<td width=400>
-		</td>	
+		</td>
 	</tr>
 	<tr>
 		<td colspan=3 height=90><img src="mackdee_header.jpg" style="border-bottom: 1px solid  rgba(6, 0, 0, 1)"></img>
@@ -29,24 +35,35 @@
 <div style="width:1200; ">
 
           <div align="justify" style="width: 380px; float:left; margin:10; ">
-<p align = "center"><b><font size="4">CHRIST  RESERECTED,PLANS WORLD TOUR W. DALI,DOKKEN</font></b><p align = "center">BY The MDS.com staff</p><p  align="justify">
-Considering his life and death resulted in thousands of years of hysteria and that his recent  “resurrection” will surely produce more, 
+          <p align = "center"><b><font size="4">CHRIST  RESERECTED,PLANS WORLD TOUR W. DALI,DOKKEN</font></b><p align = "center">BY The MDS.com staff</p>
+          	<div style="width: 80px; float:left; margin:4; "><img src="ZombieChrist.jpg" width="80px"></div>
+          	<div style="width: 380px;>
+<p  align="justify"><font color="black" size="2">
+<a id="uniqueid" href="SomeOtherPage.html">Considering his life and death resulted in thousands of years of hysteria and that his recent  “resurrection” will surely produce more,
 The most influential man in human history is surprisingly laid back and seems a bit bemused by the  mania he inspires.
-   “Dude, Patti Smith never died for MY sins “cracks the savior, (Cont'd on Page 4)<hr>
-<p align = "center"><b><font size="4"> Joke  Of The Day </font></b><p align="justify">To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will  "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie,  Sophia Vergara, Scarlett Johanson, and that Hot waitress who works at The Olive Garden.    <br><hr>
-<p align="justify">
-<p align = "center"><b><font size="4">A Word From Vin Marino</font></b><p align="justify"> "I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, “The  Larry Sanders Show”. Pizza is yummy and Patti Smith transcends cool – Bye"</p>
-          </div>
+   </a></font><hr id='hrdotted' /></div>
+
+          <p align = "center"><b><font size="4">Joke  Of The Day</font></b><p>
+          	<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+          	<div style="width: 380px;>
+<p align="justify"><font size=2">To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will  "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie,  Sophia Vergara, Scarlett Johanson, and that Hot waitress who works at The Olive Garden.    </font><br><hr id='hrdotted' /></div>
+
+          <p align = "center"><b><font size="4">A Word From Vin Marino</font></b><p>
+          	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.jpg" width="80px"></div>
+          	<div style="width: 380px;>
+<p align="justify"><font size=2">"I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, “The  Larry Sanders Show”. Pizza is yummy and Patti Smith transcends cool – Bye"</font></p></div>
+		  </div>
+
           <div align="justify" style="width: 380px; float:left; margin:10; ">
 <iframe src="http://player.vimeo.com/video/73292195" width="375"  height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 				</iframe>
-<p  align = "center"><b><font size="4"> Editorial </font></b><p align="justify">Abott had Costello. Penn  has Teller. Mick - Keith. Jonny – Ed. Bonnie even had Clyde. Then how sad was this country's perceived  state of affairs that a man with a record of extensive congressional service and unimaginable bravery  and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for (Cont'd on Page  3)</p><hr>
-<p  align = "center"><b><font size="4">Monthly Feature</font></b><p align="justify">Monthly Feature <hr>
+<p align = "center"><b><font size="4"> Editorial </font></b><p align="justify">Abott had Costello. Penn  has Teller. Mick - Keith. Jonny – Ed. Bonnie even had Clyde. Then how sad was this country's perceived  state of affairs that a man with a record of extensive congressional service and unimaginable bravery  and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for (Cont'd on Page  3)</p><hr>
+<p align = "center"><b><font size="4">Monthly Feature</font></b><p align="justify">Monthly Feature <hr>
           </div>
           <div align="justify" style="width: 380px; float:left; margin:10; ">
 <p align = "center"><b><font  size="4">Synopsys</font></b></p>As he approaches the threshold of middle age, Mackenzie Dylan looks  like a guy who has it all. He’s smart, funny and handsome. He’s well respectedas a successful New York  Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable   –albeit neurotic-best friend. But Mack Dylan carries his share of baggage-a repressed childhood, an  inability to express emotions, a failed engagement and a tendency not to deal with (Cont'd on Page 7)  <hr>
-<p  align = "center"><b><font size="4"> About The Creators</font></b><p align="justify">About The  Creators<hr>              
-<p  align = "center"><b><font size="4"> Origin </font></b><p align="justify">The story of “The Mackenzie  Dylan Show” is essentially a storyof friendship. I’ve known the Co-Creator Vincent Marino for 33 years.  It was from his “Creative Vagina” (zip locked in an airtight placenta) that the amazing, original idea  of a neurotic malcontent who must work out his family issues with an “imaginary” David Letterman-esque  talk show sprang!33 years ago, I was the pesky, unatheletic,
+<p align = "center"><b><font size="4"> About The Creators</font></b><p align="justify">About The  Creators<hr>
+<p align = "center"><b><font size="4"> Origin </font></b><p align="justify">The story of “The Mackenzie  Dylan Show” is essentially a storyof friendship. I’ve known the Co-Creator Vincent Marino for 33 years.  It was from his “Creative Vagina” (zip locked in an airtight placenta) that the amazing, original idea  of a neurotic malcontent who must work out his family issues with an “imaginary” David Letterman-esque  talk show sprang!33 years ago, I was the pesky, unatheletic,
           </div>
 
 </div>
