--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           	<div style="width: 80px; float:left; margin:4; "><img src="ZombieChrist.jpg" width="80px"></div>
           	<div style="width: 380px;>
 <p  align="justify"><font color="black" size="2">
-<a id="uniqueid" href="SomeOtherPage.html">Considering his life and death resulted in thousands of years of hysteria and that his recent  ìresurrectionî will surely produce more,
+<a id="uniqueid" href="SomeOtherPage.html">Considering his life and death resulted in thousands of years of hysteria and that his recent  ‚Äúresurrection‚Äù will surely produce more,
 The most influential man in human history is surprisingly laid back and seems a bit bemused by the  mania he inspires.
    </a></font><hr id='hrdotted' /></div>
 
@@ -51,19 +51,19 @@ The most influential man in human history is surprisingly laid back and seems a 
           <p align = "center"><b><font size="4">A Word From Vin Marino</font></b><p>
           	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.jpg" width="80px"></div>
           	<div style="width: 380px;>
-<p align="justify"><font size=2">"I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, ìThe  Larry Sanders Showî. Pizza is yummy and Patti Smith transcends cool ñ Bye"</font></p></div>
+<p align="justify"><font size=2">"I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, ‚ÄúThe  Larry Sanders Show‚Äù. Pizza is yummy and Patti Smith transcends cool ‚Äì Bye"</font></p></div>
 		  </div>
 
           <div align="justify" style="width: 380px; float:left; margin:10; ">
 <iframe src="http://player.vimeo.com/video/73292195" width="375"  height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 				</iframe>
-<p align = "center"><b><font size="4"> Editorial </font></b><p align="justify">Abott had Costello. Penn  has Teller. Mick - Keith. Jonny ñ Ed. Bonnie even had Clyde. Then how sad was this country's perceived  state of affairs that a man with a record of extensive congressional service and unimaginable bravery  and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for (Cont'd on Page  3)</p><hr>
+<p align = "center"><b><font size="4"> Editorial </font></b><p align="justify">Abott had Costello. Penn  has Teller. Mick - Keith. Jonny ‚Äì Ed. Bonnie even had Clyde. Then how sad was this country's perceived  state of affairs that a man with a record of extensive congressional service and unimaginable bravery  and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for (Cont'd on Page  3)</p><hr>
 <p align = "center"><b><font size="4">Monthly Feature</font></b><p align="justify">Monthly Feature <hr>
           </div>
           <div align="justify" style="width: 380px; float:left; margin:10; ">
-<p align = "center"><b><font  size="4">Synopsys</font></b></p>As he approaches the threshold of middle age, Mackenzie Dylan looks  like a guy who has it all. Heís smart, funny and handsome. Heís well respectedas a successful New York  Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable   ñalbeit neurotic-best friend. But Mack Dylan carries his share of baggage-a repressed childhood, an  inability to express emotions, a failed engagement and a tendency not to deal with (Cont'd on Page 7)  <hr>
+<p align = "center"><b><font  size="4">Synopsys</font></b></p>As he approaches the threshold of middle age, Mackenzie Dylan looks  like a guy who has it all. He‚Äôs smart, funny and handsome. He‚Äôs well respectedas a successful New York  Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable   ‚Äìalbeit neurotic-best friend. But Mack Dylan carries his share of baggage-a repressed childhood, an  inability to express emotions, a failed engagement and a tendency not to deal with (Cont'd on Page 7)  <hr>
 <p align = "center"><b><font size="4"> About The Creators</font></b><p align="justify">About The  Creators<hr>
-<p align = "center"><b><font size="4"> Origin </font></b><p align="justify">The story of ìThe Mackenzie  Dylan Showî is essentially a storyof friendship. Iíve known the Co-Creator Vincent Marino for 33 years.  It was from his ìCreative Vaginaî (zip locked in an airtight placenta) that the amazing, original idea  of a neurotic malcontent who must work out his family issues with an ìimaginaryî David Letterman-esque  talk show sprang!33 years ago, I was the pesky, unatheletic,
+<p align = "center"><b><font size="4"> Origin </font></b><p align="justify">The story of ‚ÄúThe Mackenzie  Dylan Show‚Äù is essentially a storyof friendship. I‚Äôve known the Co-Creator Vincent Marino for 33 years.  It was from his ‚ÄúCreative Vagina‚Äù (zip locked in an airtight placenta) that the amazing, original idea  of a neurotic malcontent who must work out his family issues with an ‚Äúimaginary‚Äù David Letterman-esque  talk show sprang!33 years ago, I was the pesky, unatheletic,
           </div>
 
 </div>
