--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ The most influential man in human history is surprisingly laid back and seems a 
 <p align="justify"><font size=2">To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will  "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie,  Sophia Vergara, Scarlett Johanson, and that Hot waitress who works at The Olive Garden.    </font><br><hr id='hrdotted' /></div>
 
           <p align = "center"><b><font size="4">A Word From Vin Marino</font></b><p>
-          	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.jpg" width="80px"></div>
+          	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.JPG" width="80px"></div>
           	<div style="width: 380px;>
 <p align="justify"><font size=2">"I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, “The  Larry Sanders Show”. Pizza is yummy and Patti Smith transcends cool – Bye"</font></p></div>
 		  </div>
