--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
 				<hr id='hrdotted' />
 
 	</div>
-    <div align="justify" style="width: 380px; float:left; margin:4; ">
+    <div align="justify" style="width: 390px; float:left; margin:4; ">
 		<iframe src="http://player.vimeo.com/video/73292195" width="375"  height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 		</iframe>
 		<p align = "left"><b><font size="4"> Editorial </font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+			<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">Abott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for
-				</font><br>
+				<p align="justify"><font size=2">
+				<a id="uniqueid" href="20140901Editorial.html">Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for the most important office on earth?
+				</a></font><br>
 			</div>
 				<hr id='hrdotted' />
 
